--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "type": "module",
   "version": "0.0.1",
   "scripts": {
+    "prebuild": "node scripts/copy-assets.js",
     "dev": "astro dev",
     "build": "astro build",
     "preview": "astro preview",
@@ -13,6 +14,10 @@
     "@astrojs/rss": "^4.0.12",
     "@astrojs/sitemap": "^3.4.1",
     "astro": "^5.10.1",
+    "gray-matter": "^4.0.3",
+    "marked": "^15.0.12",
+    "nostalgist": "^0.15.2",
     "sharp": "^0.34.2"
   }
 }
+
