--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "astro": "astro"
   },
   "dependencies": {
+    "@astrojs/markdown-remark": "^6.3.2",
     "@astrojs/mdx": "^4.3.0",
     "@astrojs/rss": "^4.0.12",
     "@astrojs/sitemap": "^3.4.1",
@@ -17,7 +18,9 @@
     "gray-matter": "^4.0.3",
     "marked": "^15.0.12",
     "nostalgist": "^0.15.2",
-    "sharp": "^0.34.2"
+    "rehype-pretty-code": "^0.14.1",
+    "remark-gfm": "^4.0.1",
+    "sharp": "^0.34.2",
+    "shiki": "^3.7.0"
   }
 }
-
